--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   uuid: ^4.4.0
   image_picker: ^1.1.2
   location: ^6.0.2
+  http: ^1.2.1
+  google_maps_flutter: ^2.6.1
+  flutter_dotenv: ^5.1.0
+  flutter_config: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -93,3 +97,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  assets:
+    - .env
